apps/hi-events/base/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hi-events-redis
  name: hi-events-redis
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: hi-events-redis
  template:
    metadata:
      labels:
        app: hi-events-redis
    spec:
      containers:
        - name: redis
          image: redis/redis-stack-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 6379
              name: redis
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
