apps/hi-events/base/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hi-events-postgres
  namespace: hi-events
spec:
  selector:
    app: hi-events-postgres
  ports:
    - port: 5432
      targetPort: 5432
