apps/hi-events/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hi-events
spec:
  type: ClusterIP
  selector:
    app: hi-events
  ports:
    - name: http
      port: 8123
      targetPort: 8123
