apps/hi-events/base/network-policies.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hi-events-netpol
  namespace: hi-events
spec:
  podSelector:
    matchLabels:
      app: hi-events
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik # TODO: confirmer le nom du namespace Traefik
      ports:
        - port: 8123
  egress:
    - to:
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app: hi-events-postgres
      ports:
        - port: 5432
    - to:
        - podSelector:
            matchLabels:
              app: hi-events-redis
      ports:
        - port: 6379
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
      ports:
        - port: 587
        - port: 465
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hi-events-postgres-netpol
  namespace: hi-events
spec:
  podSelector:
    matchLabels:
      app: hi-events-postgres
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: hi-events
      ports:
        - port: 5432
  egress: []
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hi-events-redis-netpol
  namespace: hi-events
spec:
  podSelector:
    matchLabels:
      app: hi-events-redis
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: hi-events
      ports:
        - port: 6379
  egress: []
